--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-js-utils",
   "version": "1.0.0",
-  "description": "This useful.",
+  "description": "A collection of useful functions for node.js.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
