--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "node-js-utils",
   "version": "1.0.0",
   "description": "A collection of useful functions for node.js.",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
