--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,19 @@
 {
     "compilerOptions": {
         "target": "es2018",
-        "module": "commonjs",
         "removeComments": true,
         "noImplicitReturns": true,
-        "noImplicitAny": true,
-        "noImplicitThis": true,
         "noFallthroughCasesInSwitch": true,
         "noUnusedParameters": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "noUnusedLocals": true,
         "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "strictNullChecks": true,
-        "strictFunctionTypes": true,
-        "strictBindCallApply": true,
-        "strictPropertyInitialization": true,
-        "alwaysStrict": true,
-        "outDir": "src/JavaScript",
+        "outFile": "index.js",
         "declaration": true
     },
     "include": [
-        "src/TypeScript/**/*"
+        "src/**/*"
     ],
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": []
 }
