--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@oathompsonjones/node-js-utils",
-  "version": "1.0.0",
+  "name": "simple-node-utils",
+  "version": "0.0.1",
   "description": "A collection of useful functions for node.js.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
