--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "simple-node-utils",
-    "version": "0.5.3",
+    "version": "0.5.4",
     "description": "A collection of useful functions for node.js.",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
+    "main": "index.js",
+    "types": "index.d.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "prepare": "tsc"
