--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
     "name": "simple-node-utils",
-    "version": "0.6.1",
+    "version": "2.0.0",
     "description": "A collection of useful functions for node.js.",
-    "main": "index.js",
-    "types": "index.d.ts",
+    "main": "./build/index.js",
+    "types": "./build/index.d.ts",
+    "exports": "./build/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "prepare": "tsc"
+        "prepare": "pnpm build",
+        "lint": "pnpm eslint .",
+        "test": "pnpm jest",
+        "build": "pnpm tsc --project tsconfig.build.json"
     },
     "author": "oathompsonjones",
     "license": "ISC",
     "repository": {
         "url": "https://github.com/oathompsonjones/simple-node-utils.git"
+    },
+    "devDependencies": {
+        "@oathompsonjones/eslint-config": "0.0.57",
+        "@oathompsonjones/ts-config": "0.0.24",
+        "@types/jest": "^29.5.2",
+        "@types/node": "^20.3.1",
+        "eslint": "^8.43.0",
+        "jest": "^29.5.0",
+        "ts-jest": "^29.1.0",
+        "typescript": "^5.1.3"
     }
 }
