--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "simple-node-utils",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "description": "A collection of useful functions for node.js.",
     "main": "./build/index.js",
     "types": "./build/index.d.ts",
     "exports": "./build/index.js",
+    "type": "module",
     "scripts": {
         "prepare": "pnpm build",
         "lint": "pnpm eslint .",
@@ -17,13 +18,13 @@
         "url": "https://github.com/oathompsonjones/simple-node-utils.git"
     },
     "devDependencies": {
-        "@oathompsonjones/eslint-config": "0.0.57",
+        "@oathompsonjones/eslint-config": "0.0.58",
         "@oathompsonjones/ts-config": "0.0.24",
-        "@types/jest": "^29.5.2",
-        "@types/node": "^20.3.1",
-        "eslint": "^8.43.0",
-        "jest": "^29.5.0",
-        "ts-jest": "^29.1.0",
-        "typescript": "^5.1.3"
+        "@types/jest": "^29.5.3",
+        "@types/node": "^20.4.7",
+        "eslint": "^8.46.0",
+        "jest": "^29.6.2",
+        "ts-jest": "^29.1.1",
+        "typescript": "^5.1.6"
     }
 }
