--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
     "name": "simple-node-utils",
-    "version": "2.1.1",
+    "version": "2.2.0",
     "description": "A collection of useful functions for node.js.",
     "main": "./build/index.js",
     "types": "./build/index.d.ts",
     "exports": "./build/index.js",
     "type": "module",
     "scripts": {
-        "prepare": "pnpm build",
-        "lint": "pnpm eslint .",
-        "test": "pnpm jest",
+        "prepare": "build",
+        "lint": "eslint .",
+        "test": "vitest run",
         "build": "pnpm tsc --project tsconfig.build.json"
     },
     "author": "oathompsonjones",
@@ -18,13 +18,11 @@
         "url": "https://github.com/oathompsonjones/simple-node-utils.git"
     },
     "devDependencies": {
-        "@oathompsonjones/eslint-config": "0.0.71",
+        "@oathompsonjones/eslint-config": "0.0.72",
         "@oathompsonjones/ts-config": "0.0.27",
-        "@types/jest": "^29.5.10",
         "@types/node": "^20.10.0",
         "eslint": "^8.54.0",
-        "jest": "^29.7.0",
-        "ts-jest": "^29.1.1",
-        "typescript": "^5.3.2"
+        "typescript": "^5.3.2",
+        "vitest": "^0.34.6"
     }
 }
