--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "exports": "./build/index.js",
     "type": "module",
     "scripts": {
-        "prepare": "build",
+        "prepare": "pnpm build",
         "lint": "eslint .",
         "test": "vitest run",
         "build": "pnpm tsc --project tsconfig.build.json"
