--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-        node: [14.x, 16.x, 18.x, 20.x]
+        node: [14.x, 18.x, 20.x]
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
@@ -36,7 +36,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-        node: [14.x, 16.x, 18.x, 20.x]
+        node: [14.x, 18.x, 20.x]
     steps:
         - uses: actions/checkout@v3
         - uses: pnpm/action-setup@v2
