--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "simple-node-utils",
-    "version": "2.2.4",
+    "version": "2.2.5",
     "description": "A collection of useful functions for node.js.",
     "main": "./build/index.js",
     "types": "./build/index.d.ts",
@@ -18,10 +18,11 @@
         "url": "https://github.com/oathompsonjones/simple-node-utils.git"
     },
     "devDependencies": {
-        "@oathompsonjones/eslint-config": "1.1.1",
-        "@oathompsonjones/ts-config": "0.0.31",
-        "@types/node": "^20.11.19",
-        "typescript": "^5.3.3",
-        "vitest": "^1.3.1"
-    }
+        "@oathompsonjones/eslint-config": "1.5.0",
+        "@oathompsonjones/ts-config": "0.0.35",
+        "@types/node": "^22.5.0",
+        "typescript": "^5.5.4",
+        "vitest": "^2.0.5"
+    },
+    "packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf"
 }
